# juypter_skeleton

./: .gitignore  README.md  base_notebook.ipynb  calc_app_usage.ipynb  calc_prod_warranty.ipynb  check_df.py  clean_dataframe.ipynb  dataviz_seaborn.ipynb  pyproject.toml  requirements.txt  setup.sh
data/: gen_random.xlsx  purchases.csv  purchases_month.csv  test_clean.csv  user_app_access.csv
data/webaccess/: combined.csv  combined.xlsx  web_access_four.csv  web_access_one.csv  web_access_three.csv  web_access_two.csv  web_access_zero.csv
notebooks/: SAP_notebook.ipynb  base_notebook.ipynb  calc_app_usage.ipynb  clean_dataframe.ipynb  dataviz_seaborn.ipynb  process_webaccess.ipynb
