[tool.poetry]
name = "juypter_skeleton_poetry"
version = "0.1.0"
description = ""
authors = ["arappaport"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.2.1"
jupyter = "^1.0.0"
seaborn = "^0.13.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
